--- a/SchoolLanguageLearn/SchoolLanguageLearn/Pages/AddEditServicePage.xaml
+++ b/SchoolLanguageLearn/SchoolLanguageLearn/Pages/AddEditServicePage.xaml
@@ -16,6 +16,15 @@
                         <Image Source="{Binding MainImage}" x:Name="MainImage" Height="150" ></Image>
                     </Border>
                     <Button x:Name="EditImageBtn" Click="EditImageBtn_Click">Изменить изображение</Button>
+                    <ListView x:Name="ImageList">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn>
+                                    <Image Source="{Binding PhotoByte}"></Image>
+                                </GridViewColumn>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
                 </StackPanel>
             </StackPanel>
             <StackPanel>
@@ -29,11 +38,11 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock>Стоимость</TextBlock>
-                <TextBox Text="{Binding Cost}"></TextBox>
+                <TextBox Text="{Binding Cost}" PreviewTextInput="TextBox_PreviewTextInput"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock>Длительность сек.</TextBlock>
-                    <TextBox Text="{Binding DurationInSeconds}"></TextBox>
+                    <TextBox Text="{Binding DurationInSeconds}" PreviewTextInput="TextBox_PreviewTextInput"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock>Описание</TextBlock>
@@ -41,7 +50,7 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock>Cкидка</TextBlock>
-                    <TextBox Text="{Binding Discount}"></TextBox>
+                    <TextBox Text="{Binding Discount}" PreviewTextInput="TextBox_PreviewTextInput"></TextBox>
             </StackPanel>
             
             <StackPanel>
