--- a/SchoolLanguageLearn/SchoolLanguageLearn/MainWindow.xaml
+++ b/SchoolLanguageLearn/SchoolLanguageLearn/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SchoolLanguageLearn"
         mc:Ignorable="d"
-        Title="Школа языков 'Леарн'" Height="450" Width="850">
+        Title="Школа языков 'Леарн'" Height="450" Width="850" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="15*"/>
