--- a/SchoolLanguageLearn/SchoolLanguageLearn/Pages/AddEditServicePage.xaml
+++ b/SchoolLanguageLearn/SchoolLanguageLearn/Pages/AddEditServicePage.xaml
@@ -16,12 +16,12 @@
                         <Image Source="{Binding MainImage}" x:Name="MainImage" Height="150" ></Image>
                     </Border>
                     <Button x:Name="EditImageBtn" Click="EditImageBtn_Click">Изменить изображение</Button>
-                    <ScrollViewer Margin="2" 
+                    <ScrollViewer Height="350" Width="350" Visibility="Hidden" x:Name="PhotoScroll" Margin="2" 
                                   HorizontalAlignment="Center" 
                                   HorizontalScrollBarVisibility="Disabled">
-                        <WrapPanel Height="350" Width="350" x:Name="PhotoWp"></WrapPanel>
+                        <WrapPanel  x:Name="PhotoWp"></WrapPanel>
                     </ScrollViewer>
-                    <Button Height="25" x:Name="AddImageBtn" Click="AddImageBtn_Click">Добавить изображение</Button>
+                    <Button Visibility="Hidden" Height="25" x:Name="AddImageBtn" Click="AddImageBtn_Click">Добавить изображение</Button>
                 </StackPanel>
             </StackPanel>
             <StackPanel>
